<resources>
    <string name="app_name">conduit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_auth">Sign Up / Login</string>
    <string name="menu_feed">Feed</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="email_id">Email</string>
    <string name="password">password</string>
    <string name="username">Username</string>
    <string name="global_feed">Global Feed</string>
    <string name="my_feed">My Feed</string>
    <string name="url_of_profile_picture">URL of profile picture</string>
    <string name="short_bio_about_you">Short Bio about you</string>
    <string name="new_password">New Password</string>
    <string name="update_settings">Update Settings</string>
    <string name="arg_article_slug">ARTICLE_SLUG</string>
    <string name="user_image">User Image</string>
    <string name="add_article">Add Article</string>
    <string name="article_title">Article Title</string>
    <string name="what_s_this_article_about">What\'s this article about?</string>
    <string name="write_your_article">Write your article</string>
    <string name="tags">Enter Tags</string>
    <string name="publish_article">Publish Article</string>

</resources>