<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp">

    <EditText
        android:id="@+id/settings_imageUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:hint="@string/url_of_profile_picture"
        android:inputType="textUri"
        android:autofillHints="url" />

    <EditText
        android:id="@+id/settings_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:hint="@string/username"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/settings_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:gravity="top"
        android:hint="@string/short_bio_about_you"
        android:lines="5"
        android:autofillHints="bio" />

    <EditText
        android:id="@+id/settings_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/settings_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginVertical="8dp"
        android:text="@string/update_settings" />


</LinearLayout>