<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/auth_input_username_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/auth_input_email_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/auth_input_password_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/auth_input_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

</LinearLayout>