<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <EditText
            android:id="@+id/article_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Title"
            android:ems="10"
            android:hint="@string/article_title"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/article_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Description"
            android:ems="10"
            android:hint="@string/what_s_this_article_about"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/article_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/write_your_article"
            android:inputType="textMultiLine"
            android:lines="10" />

        <EditText
            android:id="@+id/article_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Tags"
            android:ems="10"
            android:hint="@string/tags"
            android:inputType="textPersonName" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/article_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/publish_article" />
    </LinearLayout>
</ScrollView>