<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_feed">

    <fragment
        android:id="@+id/nav_feed"
        android:name="raghav.sharma.mediumclone.ui.feed.FeedControllerFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_feed">
        <action
            android:id="@+id/action_nav_feed_to_nav_article"
            app:destination="@id/nav_article"
            app:popEnterAnim="@anim/nav_default_enter_anim"
            app:popExitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/nav_feed">
            <argument
                android:name="@string/arg_article_slug"
                app:argType="string"
                app:nullable="false"

                />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_auth"
        android:name="raghav.sharma.mediumclone.ui.auth.AuthFragment"
        android:label="@string/menu_auth"
        tools:layout="@layout/fragment_auth" />

    <fragment
        android:id="@+id/nav_profile_settings"
        android:name="raghav.sharma.mediumclone.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_article"
        android:name="raghav.sharma.mediumclone.ui.article.ArticleFragment"
        android:label="Article"
        tools:layout="@layout/fragment_article" />
</navigation>